Description
Currently (aiming for Kudu 1.3) the Kerberos principal is hardcoded to 'kudu/_HOST'. While we have a flag to change it on the server, it isn't effective because we have no way to configure it on clients.
The difficulty here is that there is currently no concept of Kudu client configuration files, so while we could theoretically add a new API to KuduClientBuilder, this would then mean that everyone embedding the API would have to add a new configuration, etc. We should consider a more generic key/value "connection properties" (as used by JDBC URLs) or some concept of a client configuration file (with an API to specify where to find it, etc).
Attachments
Issue Links
- is duplicated by
-
KUDU-3230 SASL PROTO name is hardcode to "kudu"
-
- Closed
-