Tag kerberos_principal flag as unsafe

See the new comment and KUDU-1884 for rationale.

Change-Id: I6b296265c9a62a2908222d28903a47ea31719db2
Reviewed-on: http://gerrit.cloudera.org:8080/6036
Tested-by: Kudu Jenkins
Reviewed-by: Todd Lipcon <todd@apache.org>